# RotationCurves

./: .gitignore  datawrangling.py  mcmc_fit.py  monitor.py  pyproject.toml  toydataset.ipynb  verify_density2param.py  verify_velocity2param.py
data/: galaxy_parameters.csv
data/toydatasets/: pISO_midnoise.csv  pISO_noiseless.csv  pISO_smallnoise.csv  pISO_strongnoise.csv
models/: density.py  density2param.py  velocity.py  velocity2param.py
outputs/SPARC/density_2param/: hall_of_fame.csv
outputs/SPARC/velocity_2param/: hall_of_fame.csv
outputs/fits/: NFW.csv  log1p_c8.csv  mcmc_Burkert.csv  mcmc_NFW_density.csv  mcmc_SR6_c11.csv  mcmc_SR6_c12.csv  mcmc_SR6_c18.csv  mcmc_SR6_c21.csv  mcmc_SR_c15.csv  mcmc_SR_c18.csv  mcmc_pISO.csv  mcmc_pISO_density.csv  pISO.csv
outputs/toydatasets/density_piso_midnoise_20gal/: hall_of_fame.csv
outputs/toydatasets/density_piso_nonoise_20gal/: hall_of_fame.csv
outputs/toydatasets/stage6_2param_verify/20260310_154231_icVMgF/: hall_of_fame.csv
outputs/toydatasets/stage7_phys_verify/20260311_102042_suBTfy/: hall_of_fame.csv
