[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sparc-sr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.3.4",
    "pandas==2.3.3",
    "scipy==1.16.3",
    "matplotlib==3.10.7",
    "scikit-learn==1.7.2",
    "sympy==1.14.0",
    "emcee==3.1.6",
    "astropy==7.2.0",
    "pysr @ git+https://github.com/MilesCranmer/PySR.git",  # v2.0.0a2
]
