[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sparc-sr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Symbolic regression — pinned to exact commit used for production runs
    # (PySR 2.0.0a2, SymbolicRegression.jl v2.0.0-alpha.9, Julia 1.10.x)
    "pysr @ git+https://github.com/MilesCranmer/PySR.git@1e18b9a34cd8971d1a18fcc690a85f050ddbe728",

    # Core numerics
    "numpy==2.3.4",
    "pandas==2.3.3",
    "scipy==1.16.3",
    "sympy==1.14.0",

    # Julia bridge (pinned so Julia env resolves identically)
    "juliacall==0.9.28",
    "juliapkg==0.1.22",

    # Data / analysis
    "scikit-learn==1.7.2",
    "astropy==7.2.0",
    "emcee==3.1.6",
    "pyarrow==21.0.0",

    # Plotting
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
]
